@@ -24,17 +24,12 @@ wait_dbms()
 
  #2019-01-29 jb: added '-XX:HeapDumpPath=/opt/metasfresh/heapdump' to java opts
  #               gh issue: https://github.com/metasfresh/metasfresh-docker/issues/41
- #
- 
- #2019-02-01 jb: changed memory parameter to make java aware its living in a container.
- #               this allows for flexible memory allocation in docker-compose.yml settings.
- #               Thanks to https://blog.csanchez.org/2017/05/31/running-a-jvm-in-a-container-without-getting-killed/
- #               
+
 run_metasfresh()
 {
  cd /opt/metasfresh-webui-api/ && java -Dsun.misc.URLClassPath.disableJarChecking=true \
- -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -XX:MaxRAMFraction=1 \
- -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/opt/metasfresh-webui-api/heapdump \
+ -Xmx1024M -XX:MaxPermSize=512M \
+ -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/opt/metasfresh/heapdump \
  -DPropertyFile=/opt/metasfresh-webui-api/metasfresh.properties \
  -Dcom.sun.management.jmxremote.port=1618 \
  -Dcom.sun.management.jmxremote.authenticate=false \
